# Research-on-Software-Updates

./:  agent_factory_gemini.py  .env  .gitignore  API_STRUCTURE_EXPLANATION.md  OkIP_Conference Full_Paper_2_ColumnTemplate.docx  README.md  agent.py  api_server.py  app.py  basic_rag.py  enriched_utc.py  filtered_posts_for_sentiment_analysis.json  hardcoded_que.py  hardcoded_tool.py  lake_gold.py  lake_silver_layer.py  manual_review_template.md  readme.md  reddit-requests.py  redditBot.py  reddit_fetch.py  releasetrain_tools.py  requirements.txt  top_20_negative_posts.json  top_negative_review.py  vector_store.py
bot/: nvd.py
research-release-notes-generator/: LICENSE.md  TESTING_RESULTS.md  TEST_RESULTS.md  USAGE.md  current-release-notes.md  pyproject.toml  pyvenv.cfg  readme.md  release-notes.md  test_codesnip.py  test_local.py
research-release-notes-generator/codesnip/: cli.py  github_fetcher.py  quality_checker.py
research-release-notes-generator/codesnip_agentic_version_2/: README.md  codesnip_wrapper.sh  pyproject.toml  release_note.md
research-release-notes-generator/codesnip_agentic_version_2/codesnip.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
research-release-notes-generator/codesnip_agentic_version_2/codesnip/agents/: __init__.py  base.py  categories.py  executor.py  formatter.py  runner.py
research-release-notes-generator/codesnip_agentic_version_2/codesnip/application/: use_cases.py
research-release-notes-generator/codesnip_agentic_version_2/codesnip/infrastructure/: code_checker.py  config_service.py  github_service.py  llm_service.py
(+99 files in other folders)
